fixing spacing again

--- a/styles.css
+++ b/styles.css
@@ -21,5 +21,6 @@ footer {
 
 .strip {
     margin: auto;
+    width: 100%;
     max-width: 400px;
 }
